# mc-server-share-app

./: .gitignore  .vercelignore  README.md  instructions.txt  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/coordinator/: .env.example  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/coordinator/app/: globals.css  layout.tsx  page.tsx
apps/coordinator/app/api/discord/: route.ts
apps/coordinator/app/api/health/: route.ts
apps/coordinator/app/api/sessions/[id]/complete/: route.ts
apps/coordinator/app/api/shares/: route.ts
apps/coordinator/app/api/shares/[code]/: route.ts
apps/coordinator/app/api/uploads/package-token/: route.ts
apps/coordinator/app/guide/: page.tsx
apps/coordinator/app/share/[code]/: ShareActions.tsx  page.tsx
apps/coordinator/db/: schema.sql
apps/coordinator/src/: blobUpload.ts  coordinator.test.ts  coordinator.ts  crypto.ts  errors.ts  http.ts  mapper.ts  memoryRepository.ts  postgresRepository.ts  repository.ts  runtime.ts
apps/desktop/: .env.example  index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts  device.ts  upload.ts
docs/: history-cleanup.md  hosting-guide.md  migration.md  testing.md  vercel-setup.md
scripts/: apply-schema.mjs  register-discord-command.mjs
(+4 files in other folders)
